--- a/app/views/mattches/index.html.erb
+++ b/app/views/mattches/index.html.erb
@@ -1,13 +1,18 @@
 <p id="notice"><%= notice %></p>
 
+<div class="container">
+<div class="col-sm-9">
+
 <h1>All Matches</h1>
 
-<table>
-  <thead>
+<table class="table table-bordered">
+  <thead class="thead-inverse">
     <tr>
       <th>Match date</th>
-      <th>Team</th>
-      <th>Team</th>
+      <th>Team A</th>
+      <th>Team B</th>
+      <th>A</th>
+      <th>B</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -48,6 +53,8 @@
     <% end %>
   </tbody>
 </table>
+</div>
+</div>
 
 <br>
 
