--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,9 +1,9 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Games</h1>
-
-<table>
-  <thead>
+<div class="container">
+<table class="table table-bordered">
+  <thead class="thead-inverse">
     <tr>
       <th>Mattch</th>
       <th>Game number</th>
@@ -30,7 +30,8 @@
     <% end %>
   </tbody>
 </table>
+</div>
 
 <br>
 
-<%= link_to 'New Game', new_game_path, :class=>"btn btn-primary"  %>
+<%= link_to 'New Game', new_game_path, :class=>"btn btn-primary"  %> |
