--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -6,12 +6,11 @@
 
 Matches played:<%= @player.games.where.not(:winning_team_id => nil ).count("DISTINCT mattch_id") %>
 
+<div class="container">
 <h2> Games </h2>
 
-
-
-<table class="table">
-<thead>
+<table class="table table-bordered">
+<thead class="thead-inverse">
 	<tr>
   	<th colspan="2">Match</th>
     <th>Game</th>
@@ -28,12 +27,12 @@ Matches played:<%= @player.games.where.not(:winning_team_id => nil ).count("DIST
 <% count_games = 0 %>
 <% count_wins = 0 %>
 
-<% @player.games.where.not(:winning_team_id => nil ).each do |game| %>
+<% @player.games.where.not(:winning_team_id => 0 ).each do |game| %>
   <% count_games += 1 %> 
   <tr>
   	<td><%= game.mattch.mattch_date %></td>
     <td> vs <%= Team.find(game.matchteams.where.not(:team_id => @player.team_id ).first.team_id).name %></td>
-    <td> - game # - <%= game.game_number %></td>
+    <td>game # <%= game.game_number %></td>
     <td> <% if game.winning_team_id == @player.team_id %>
            Won
            <% count_wins += 1 %>          
@@ -67,26 +66,27 @@ Matches played:<%= @player.games.where.not(:winning_team_id => nil ).count("DIST
     </tr>
   <% end %>
   <tr>
-    <td></td>
+    <td>totals</td>
     <td></td>
     <td><%= count_games %></td>
     <td><%= count_wins %></td> 
     <td><%= count_eights %></td> 
   </tr>
   <tr>  
+    <td>percent</td>
     <td></td>
     <td></td>
-    <td></td>
-    <td align="right">
-      <% if (count_games == 0) %>
-        0 </td><td align="right">  0 </td>
-      <% else %>
-        <%= ((count_wins.to_f/count_games)*100).round(0) %> </td>
+    <% if (count_games == 0) %>
+        <td> 0 </td> 
+        <td align="right">  0 </td>
+    <% else %>
+        <td> <%= ((count_wins.to_f/count_games)*100).round(0) %>% </td>
         <td align="right"><%= ((count_eights.to_f/count_games)*100).round(0) %>%</td>
       <% end %>    
   </tr>
 
 </table>
+</div>
 
 <%= link_to 'Edit Player', edit_player_path(@player), :class=>"btn btn-primary"  %> |
 <%= link_to 'All Players', players_path, :class=>"btn btn-primary"  %>
