--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,10 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Teams</h1>
-
-
 <div class="container">
 <div class="col-sm-9">
+
+<h1>Teams</h1>
+
 <table class="table table-bordered">
   <thead class="thead-inverse">
     <tr>
@@ -35,10 +35,10 @@
     <% end %>
   </tbody>
 </table>
-
-</div>
-</div>
-
 <br>
 
-<%= link_to 'New Team', new_team_path, :class=>"btn btn-primary"  %>
+</div>
+</div>
+
+<%= link_to 'New Team', new_team_path, :class=>"btn btn-primary"  %> |
+
