After fixing Postgres order issues

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -15,6 +15,7 @@
   <tbody>
     <% @games.each do |game| %>
       <tr>
+        <td><%= game.id %></td>
         <td><%= game.mattch_id %></td>
         <td><%= game.mattch.mattch_date %></td>
         <td><%= game.matchteams.first.team.name %></td>
