--- a/app/views/mattches/_form.html.erb
+++ b/app/views/mattches/_form.html.erb
@@ -88,9 +88,9 @@
 
         <div class="col-sm-3">
           <% if @counter_b < 2 %>   
-            <%= p.collection_select(:player_id, Player.where(:team_id => @team_a_id).order("l_name"), :id, :full_name, {},html_options={:class=>"select_player_left"}) %>
+            <%= p.collection_select(:player_id, Player.where(:team_id => @team_a_id).order("f_name"), :id, :full_name, {},html_options={:class=>"select_player_left"}) %>
           <% else %>
-            <%= p.collection_select(:player_id, Player.where(:team_id => @team_b_id).order("l_name"), :id, :full_name, {}, 
+            <%= p.collection_select(:player_id, Player.where(:team_id => @team_b_id).order("f_name"), :id, :full_name, {}, 
                                     html_options={:class=>"select_player_right"}) %>
           <% end %>
           8<%= p.check_box(:eight) %>
