--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -25,7 +25,7 @@
     <th colspan="3"></th>
   </tr>
 <tbody>
-  <% @team.players.order(:l_name).each do |player| %>
+  <% @team.players.order(:f_name).each do |player| %>
     <tr>
       <td><%= player.full_name %></td>
       <td><%= player.team.name%></td>
@@ -93,6 +93,5 @@
 </div>
 
 
-<%= link_to 'Edit', edit_team_path(@team), :class=>"btn btn-primary"  %> |
-<%= link_to 'All Teams', teams_path, :class=>"btn btn-primary"  %> |
+<%= link_to 'Edit Team', edit_team_path(@team), :class=>"btn btn-primary"  %> |
 <%= link_to 'Add Player', new_player_path, :class=>"btn btn-primary"  %> |
